# omnigence-ai

./: .dockerignore  .env.template  .gitignore  DOCKER_GUIDE.md  Dockerfile  Dockerfile.backend  Makefile  README.md  app_server.py  checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  client.py  docker-compose.yml  docker-logs.bat  docker-start.bat  docker-stop.bat  finance_agent_server.py  hr_agent_server.py  index.html  main_server.py  package-lock.json  package.json  pyrightconfig.json  requirements.txt  run_test.sh  setup.py  start-dev.sh  tailwind.config.js
app/: FinanceFlowState.py
configs/: paths.py  pyproject.toml
database/: db_helper.py
docs/: AI_SIGNATURE_REMOVAL.md  AUTO_BACKGROUND_REMOVAL.md  BUG_FIX_v2.md  FIXES_SUMMARY.md  PDF_EXPORT_SOLUTION.md  PDF_FIX_SUMMARY.md  QA_TEST_REPORT.md  SIGNATURE_FEATURE.md  SIGNATURE_UPLOAD_FEATURE.md  Use Cases Doc: Job & Quotation.md  VERSION_2.0_AI_UPGRADE.md  annotation_docs.md  architecture_overview.md  main_flow.md
html/: invoice_html_template.html  quotation_html_template.html
main_flow/: agent_classifier.py  aggregation_agent.py  final_response_agent.py  intent_analyzer.py  main_flow.py  orchestrator_agent.py  pre_orchestrator_logger.py  routing_agent.py
src/: App.jsx  index.css  main.jsx
test/: README_CLEANUP.md  README_USE_CASE_TESTS.md  __init__.py  cleanup_test_data.py  financeAgent_test_roadmap.md  run_quotation_tests.py  test_company_service_create.py  test_company_service_update.py  test_crud_react_agent.py  test_helpers.py  test_job_service_create.py  test_job_service_update.py  (+13 more)
ui/: style.py  (+1 more)
(+282 files in other folders)
